--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
     },
     "require": {
         "php": "^7.2",
-        "symfony/console": "^4.2"
+        "symfony/console": "^4.2",
+        "league/csv": "^9.2"
     }
 }
